Fix placeholder replacement with String.formatted() snippet